# OOP_lab_2

./: LICENSE  README.md  pyproject.toml
tasks/: class_Money.py  task_1.py  task_2.py
tasks/money_package/: __init__.py  class_money_task_2.py
tests/: test_task_1.py  test_task_2.py
